Fix:   Pre-header color and z-index adjusted.
-style.css
    - header z-index set to 99999.
    - pre-header background color set to off- white with
      slight transparency.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,14 @@ p {
 
 /*--- Heading ---*/
 
+header {
+    z-index: 99999;
+}
+
+#pre-header {
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
 #pre-header div div p{
     color: #547AA5;
     font-size: 100%;
